Fix the position of the modal 1 butons

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -83,13 +83,17 @@
                     What would you like to do?
                 </div>
 
-                <div>
-                    <button type="button" class="btn btn-outline-dark modal-button">Post an item</button><br />
-                    <button type="button" class="btn btn-outline-dark modal-button">Look for items</button><br />
+                <div class="modal-buttons">
+                    <div class="modal-button-container">
+                        <button type="button" class="btn btn-outline-dark modal-button">Post an item</button><br />
+                    </div>
+                    <div class="modal-button-container">
+                        <button type="button" class="btn btn-outline-dark modal-button">Look for items</button><br />
+                    </div>
                 </div>
 
-                <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
-            </div>
+                    <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
+                </div>
             <div class="modal-footer">
                 <p class="modaltext">Thigns</p>
                 <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-2">next</button>
