Page 11 (Homepage after tutorial) now linked via title text to page 12: ItemReadView

--- a/LoydCrafts.WebSite/Pages/11_HomepageAfterTutorial.cshtml
+++ b/LoydCrafts.WebSite/Pages/11_HomepageAfterTutorial.cshtml
@@ -4,5 +4,5 @@
     ViewData["Title"] = "HomepageAfterTutorial";
 }
 
-<h1>HomepageAfterTutorial</h1>
+<a class="nav-link text-dark" asp-area="" asp-page="/12_ItemReadView.cshtml"><h1>HomepageAfterTutorial</h1><img src="~/img/10_tutorial_finish.jpg" /></a>
 
