Increase font size on modal 1 buttons

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -85,12 +85,15 @@
 
                 <div class="modal-buttons">
                     <div class="modal-button-container">
-                        <button type="button" class="btn btn-outline-dark modal-button">Post an item</button><br />
+                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Post an item</button><br />
                     </div>
                     <div class="modal-button-container">
-                        <button type="button" class="btn btn-outline-dark modal-button">Look for items</button><br />
+                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Look for items</button><br />
                     </div>
                 </div>
+                
+                
+                <br /><br />
 
                     <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
                 </div>
