--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -79,8 +79,11 @@
 
                 </div>
 
-                <div class="modal-what">
+                <div class="modal-what1">
                     What would you like to do?
+                </div>
+                <div class="modal-what2">
+                    We'll walk you through it in the next steps.
                 </div>
 
                 <div class="modal-buttons">
@@ -91,12 +94,12 @@
                         <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Look for items</button><br />
                     </div>
                 </div>
-                
-                
+
+
                 <br /><br />
 
-                    <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
-                </div>
+                <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
+            </div>
             <div class="modal-footer">
                 <p class="modaltext">Thigns</p>
                 <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-2">next</button>
