--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -98,7 +98,13 @@
     margin-right: auto;
 }
 
-.modal-what{
+.modal-what1{
+    text-align: center;
+    font-size: 36px;
+    margin-top: 30px;
+}
+
+.modal-what2 {
     text-align: center;
     font-size: 36px;
     margin-top: 30px;
