--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -106,8 +106,9 @@
 
 .modal-what2 {
     text-align: center;
-    font-size: 36px;
-    margin-top: 30px;
+    font-size: 24px;
+    margin-top: 5px;
+    font-style: italic;
 }
 
 .modal-buttons{
