--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "ItemReadView";
 }
 
+<div class="full-listing">
+
+</div>
+
 <img src="~/img/Danial_2_EvilPost.jpg" />
 <h1>ItemReadView</h1>
 <a class="nav-link text-dark" asp-area="" asp-page="/13_AboutFlagging"> About Flagging </a>
