--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -241,6 +241,16 @@
     margin-top: 20px;
 }
 
+.full-listing {
+    border-radius: 10px;
+    height: 600px;
+    padding: 10px;
+    width: 850px;
+    float: right;
+    background-color: #f7f7f7;
+    border: 1px solid #CCC;
+    margin-top: 20px;
+}
 
 .listing-img {
     height: 100px;
