div with class full-listing-header created in full-listing.

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -4,9 +4,11 @@
     ViewData["Title"] = "ItemReadView";
 }
 
-<div class="full-listing">
+    <div class="full-listing">
+        <div class="full-listing-header">
 
-</div>
+        </div>
+    </div>
 
 <img src="~/img/Danial_2_EvilPost.jpg" />
 <h1>ItemReadView</h1>
