Div with class full-listing-body created in full listing div.

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -8,6 +8,11 @@
         <div class="full-listing-header">
 
         </div>
+
+        <div class="full-listing-body">
+
+        </div>
+
     </div>
 
 <img src="~/img/Danial_2_EvilPost.jpg" />
