Div with class full-listing-footer created in div with class full-listing

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -5,11 +5,16 @@
 }
 
     <div class="full-listing">
+
         <div class="full-listing-header">
 
         </div>
 
         <div class="full-listing-body">
+
+        </div>
+
+        <div class="full-listing-footer">
 
         </div>
 
