div with class full-listing-gallery created in full-lisiting div.

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -14,6 +14,10 @@
 
         </div>
 
+        <div class="full-listing-gallery">
+
+        </div>
+
         <div class="full-listing-footer">
 
         </div>
