--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -15,7 +15,7 @@
         </div>
 
         <div class="full-listing-gallery">
-
+            <img src="~/img/Earbuds_300px.jpg" />
         </div>
 
         <div class="full-listing-footer">
