image in full-listing-gallery given class of full-listing-image

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -15,7 +15,7 @@
         </div>
 
         <div class="full-listing-gallery">
-            <img src="~/img/Earbuds_300px.jpg" />
+            <img src="~/img/Earbuds_300px.jpg" class="full-listing-image"/>
         </div>
 
         <div class="full-listing-footer">
