.full-listing-image class created, displays in block, left and right margins auto. Centers images.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -252,6 +252,11 @@
     margin-top: 20px;
 }
 
+.full-listing-image {
+    margin: 10px auto 10px;
+    display: block;
+}
+
 .listing-img {
     height: 100px;
     width: 100px;
