--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -7,11 +7,12 @@
     <div class="full-listing">
 
         <div class="full-listing-header">
-
+            <h4>Factory Fresh Apple Earbuds, get them quick!</h4>
+            <p style="float: right;">January 23, 2020 by dherstad</p>
         </div>
 
         <div class="full-listing-body">
-
+            <p>Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! Never before worn (by a human) earbuds are exactly what you need this summer to liven up your day.</p>
         </div>
 
         <div class="full-listing-gallery">
