--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -255,6 +255,9 @@
     font-size: 9pt;
     margin-bottom: 5px;
     padding: 7px 0px 7px 20px;
+
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .full-listing-image {
