--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -7,8 +7,8 @@
     <div class="full-listing">
 
         <div class="full-listing-header">
-            <h4>Factory Fresh Apple Earbuds, get them quick!</h4>
-            <p style="float: right;">January 23, 2020 by dherstad</p>
+            <h4 style="float: left;">Factory Fresh Apple Earbuds, get them quick!</h4>
+            <p style="float: right;">January 23, 2020<br>by Darren Herstad</p>
         </div>
 
         <div class="full-listing-body">
