--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -109,8 +109,8 @@
 </div>
 
 <div id="tutorial-modal-2" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin: 0px 200px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
-        <div class="modal-content">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
             <div class="modal-header">
             </div>
             <h3 class="modal-title boldfont">Welcome</h3>
