--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -113,7 +113,11 @@
         <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
             <div class="modal-header">
             </div>
-            <h3 class="modal-title boldfont">Welcome</h3>
+            <h2 class="boldfont reusesu-mod-title" style="font-size: xx-large;">Great!  We'll guide you through that in a moment.</h2>
+            <div class="reuse-mod-body">
+                First, here are a few important things to know<br>
+                before you proceed:
+            </div>
             <div class="modal-body">
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
             </div>
