--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -119,6 +119,18 @@
                 before you proceed:
             </div>
             <div class="modal-body">
+                <div class="modal-body-items">
+
+                    <div class="reusesu-table-row">
+                        <div class="modal-body-text">
+                            <ul>
+                                <li><strong>Test</strong> test</li><br />
+                                <li><strong>Test Test Test</strong> Lorem Impsum lorem ipsum</li><br />
+                                <li><strong>Test test</strong> Test Test Lorem Ipsum</li><br />
+                                <li>Test test</li><br />
+                            </ul>
+                        </div>
+                    </div>
 
             </div>
             <div class="modal-footer">
