Full-listing body text now belongs to class listing-body-text

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -12,7 +12,7 @@
         </div>
 
         <div class="full-listing-body">
-            <p>Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! Never before worn (by a human) earbuds are exactly what you need this summer to liven up your day.</p>
+            <p class="listing-body-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! Never before worn (by a human) earbuds are exactly what you need this summer to liven up your day.</p>
         </div>
 
         <div class="full-listing-gallery">
