Add more dummy text to modal 2

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -126,10 +126,16 @@
                     <div class="reusesu-table-row">
                         <div class="modal-body-text">
                             <ul>
-                                <li><strong>Test</strong> test</li><br />
-                                <li><strong>Test Test Test</strong> Lorem Impsum lorem ipsum</li><br />
-                                <li><strong>Test test</strong> Test Test Lorem Ipsum</li><br />
-                                <li>Test test</li><br />
+                                <li><strong>Test</strong> test</li>
+                                <br />
+                                <li><strong>Test Test Test</strong> Lorem Impsum lorem ipsum</li>
+                                <br />
+                                <li><strong>Test test</strong> Test Test Lorem Ipsum</li>
+                                <br />
+                                <li>Test test <strong>Important important text</strong></li>
+                                <br />
+                                <li>Test test <strong>More Important important text</strong></li>
+                                <br />
                             </ul>
                         </div>
                     </div>
