.listing-body-text class now exists for text in full listings, with attribute padding: 10px;

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -267,6 +267,11 @@
     display: block;
 }
 
+.listing-body-text {
+    padding: 10px;
+}
+
+
 .listing-img {
     height: 100px;
     width: 100px;
