--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -242,8 +242,7 @@
 }
 
 .full-listing {
-    border-radius: 10px;
-    height: 600px;
+    border-radius: 10px;.
     width: 850px;
     float: right;
     background-color: #f7f7f7;
