Revert ".full-listing class now has no height attribute, to allow body elements to define its height."
This reverts commit 9d532737cbc7941db4f8cfb05f9bf22a88caf132.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -242,7 +242,8 @@
 }
 
 .full-listing {
-    border-radius: 10px;.
+    border-radius: 10px;
+    height: 600px;
     width: 850px;
     float: right;
     background-color: #f7f7f7;
