--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -140,6 +140,11 @@
                         </div>
                     </div>
 
+                    <div class="checkbox">
+                        <input type="checkbox" checked />
+                    </div>
+
+                </div>
             </div>
             <div class="modal-footer">
                 <p class="modaltext">Thigns</p>
