--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -4,26 +4,30 @@
     ViewData["Title"] = "ItemReadView";
 }
 
-    <div class="full-listing">
+<div class="sidebar-lower">
 
-        <div class="full-listing-header">
-            <h4 style="float: left;">Factory Fresh Apple Earbuds, get them quick!</h4>
-            <p style="float: right; margin-top: 0px" class="listing-item-date-person">January 23, 2020<br>by Darren Herstad</p>
-        </div>
+</div>
 
-        <div class="full-listing-body">
-            <p class="listing-body-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! Never before worn (by a human) earbuds are exactly what you need this summer to liven up your day.</p>
-        </div>
+<div class="full-listing">
 
-        <div class="full-listing-gallery">
-            <img src="~/img/Earbuds_300px.jpg" class="full-listing-image"/>
-        </div>
+    <div class="full-listing-header">
+        <h4 style="float: left;">Factory Fresh Apple Earbuds, get them quick!</h4>
+        <p style="float: right; margin-top: 0px" class="listing-item-date-person">January 23, 2020<br>by Darren Herstad</p>
+    </div>
 
-        <div class="full-listing-footer">
+    <div class="full-listing-body">
+        <p class="listing-body-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! Never before worn (by a human) earbuds are exactly what you need this summer to liven up your day.</p>
+    </div>
 
-        </div>
+    <div class="full-listing-gallery">
+        <img src="~/img/Earbuds_300px.jpg" class="full-listing-image" />
+    </div>
+
+    <div class="full-listing-footer">
 
     </div>
+
+</div>
 
 <img src="~/img/Danial_2_EvilPost.jpg" />
 <h1>ItemReadView</h1>
