Format checkbox area in Modal 2 agreement

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -139,11 +139,14 @@
                             </ul>
                         </div>
                     </div>
-
-                    <div class="checkbox">
-                        <input type="checkbox" checked />
+                    <div class="checkbox-modal-area">
+                        <div class="checkbox-modal">
+                            <input type="checkbox" checked />
+                        </div>
+                        <div class="agrement-text">
+                            &nbsp;Test
+                        </div>
                     </div>
-
                 </div>
             </div>
             <div class="modal-footer">
