Add agreement text to modal 2

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -143,8 +143,11 @@
                         <div class="checkbox-modal">
                             <input type="checkbox" checked />
                         </div>
-                        <div class="agrement-text">
-                            &nbsp;Test
+                        <div class="agreement-text">
+                            <p>
+                                By checking this box, I accept personal responsibility for what I<br />
+                                post and acknowledge that SU is not liable for how this site is used.
+                            </p>
                         </div>
                     </div>
                 </div>
