Move modal 2 button up a little bit to better match design

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -141,7 +141,7 @@
                     </div>
                     <div class="checkbox-modal-area">
                         <div class="checkbox-modal">
-                            <input type="checkbox" checked />
+                            <input type="checkbox" />
                         </div>
                         <div class="agreement-text">
                             <p>
@@ -150,6 +150,13 @@
                             </p>
                         </div>
                     </div>
+
+                    <div class="modal-buttons" style="margin: 0px;">
+                        <div class="modal-button-container">
+                            <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Next</button><br />
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class="modal-footer">
