Enlarge list text in modal 2 to test wrapping

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -134,7 +134,7 @@
                                 <br />
                                 <li>Test test <strong>Important important text</strong></li>
                                 <br />
-                                <li>Test test <strong>More Important important text</strong></li>
+                                <li>Test test <strong>More Important important text</strong> and here's some more unimportant text that will be long</li>
                                 <br />
                             </ul>
                         </div>
