Limit modal 2 text list area to 600 pixels

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -124,7 +124,7 @@
                 <div class="modal-body-items">
 
                     <div class="reusesu-table-row">
-                        <div class="modal-body-text">
+                        <div class="modal-body-text" style="width: 600px;">
                             <ul>
                                 <li><strong>Test</strong> test</li>
                                 <br />
