Adjust centering on Modal 2 agreement checkbox area

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -129,8 +129,8 @@
     background-color: #EEE;
 }
 
-.checkbox-modal-area{
-
+.checkbox-modal-area {
+    margin-left: 50px;
 }
 
 .agreement-text{
