Added a lower-sidebar-title class paragraph to the sidebar-lower div, for the flagging section.

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "ItemReadView";
 }
 
-<div class="sidebar-lower">
-
-</div>
+    <div class="sidebar-lower">
+        <p class="lower-sidebar-text">for this post</p>
+    </div>
 
 <div class="full-listing">
 
