sidebar-lower div given temporary style in order to locate it on page: Width, height,  margin, float: left;

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "ItemReadView";
 }
 
-    <div class="sidebar-lower">
+<!-- style on the sidebar-lower div is temporary-->
+    <div class="sidebar-lower" style="width: 210px; height:300px; float: left; margin: 10px;">
         <p class="lower-sidebar-text">for this post</p>
     </div>
 
