Two buttons added to sidebar-lower div, "Email Poster" and "Flag"

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -7,6 +7,8 @@
 <!-- style on the sidebar-lower div is temporary-->
     <div class="sidebar-lower" style="width: 210px; height:300px; float: left; margin: 10px;">
         <p class="lower-sidebar-text">for this post</p>
+        <button type="button" class="btn btn-outline-dark sidebar-upper-button">Email Poster</button>
+        <button type="button" class="btn btn-outline-dark sidebar-upper-button">Flag</button>
     </div>
 
 <div class="full-listing">
