Added helpful text below "flag" button, in class help-text.

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -9,6 +9,7 @@
         <p class="lower-sidebar-text">for this post</p>
         <button type="button" class="btn btn-outline-dark sidebar-upper-button">Email Poster</button>
         <button type="button" class="btn btn-outline-dark sidebar-upper-button">Flag</button>
+        <p class="help-text">|?| How does flagging work?</p>
     </div>
 
 <div class="full-listing">
