Created class help-text for text intended to be seen if looked for but unobtrustive otherwise.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -247,6 +247,14 @@
     padding: 10px 0px;
 }
 
+.help-text {
+    font-size: 9pt;
+    margin-left: 10px; 
+    text-decoration: underline; 
+    font-style: italic; 
+    color: #555;
+}
+
 .listing {
     border-radius: 10px;
     height: 122px;
