--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -10,6 +10,9 @@
         <button type="button" class="btn btn-outline-dark sidebar-upper-button">Email Poster</button>
         <button type="button" class="btn btn-outline-dark sidebar-upper-button">Flag</button>
         <p class="help-text">|?| How does flagging work?</p>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sideModalTR">
+            Launch demo modal
+        </button>
     </div>
 
 <div class="full-listing">
@@ -37,3 +40,35 @@
 <h1>ItemReadView</h1>
 <a class="nav-link text-dark" asp-area="" asp-page="/13_AboutFlagging"> About Flagging </a>
 <a class="nav-link text-dark" asp-area="" asp-page="/14_FlagPost"> Flag Post </a>
+
+
+<!-- Side Modal Top Right -->
+<!-- Button trigger modal -->
+
+
+<!-- To change the direction of the modal animation change .right class -->
+<div class="modal fade right" id="sideModalTR" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+
+    <!-- Add class .modal-side and then add class .modal-top-right (or other classes from list above) to set a position to the modal -->
+    <div class="modal-dialog modal-side modal-top-right" role="document">
+
+
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Side Modal Top Right -->
