--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -17,21 +17,23 @@
                 <div class="create-post-component">
                     Title*
                     <form action="#" method="post">
-                        <textarea name="textarea" cols="40" rows="2">Add a short but descriptive title.</textarea>
+                        <textarea name="textarea" cols="40" rows="2">Herman Miller Aeron Desk Chair</textarea>
                     </form>
                 </div>
                 <!-- Description section-->
                 <div class="create-post-component">
                     Description*
                     <form action="#" method="post">
-                        <textarea name="textarea" cols="40" rows="10">Include additional details about your item (condition, measurements, etc)</textarea>
+                        <textarea name="textarea" cols="40" rows="10">
+                            Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.  Dimensions are approximately 17 x 24 x 42".
+                        </textarea>
                     </form>
                 </div>
                 <!-- Logistics section -->
                 <div class="create-post-component">
                     Logistics
                     <form action="#" method="post">
-                        <textarea name="textarea" cols="40" rows="5">Include information about where your item is located, when you're available to give it away, when you need to get rid of the item, etc.</textarea>
+                        <textarea name="textarea" cols="40" rows="5">My office is PIGT 523.  I have a new chair coming on 5/12 and would like to have it gone by then, should be easy to roll.  Email me to coordinate timing.​</textarea>
                     </form>
                 </div>
             </div>
