Added image of desk chair to New Post - Item Specifics page.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -11,7 +11,8 @@
     <main role="main" class="pb-3">
         <div class="create-post-body">
             <div class="create-post-title">Item Specifics</div>
-            <div class="create-post-photo-section">Add Photos</div>
+            <div class="create-post-photo-section">Add Photos <img src="~/img/Herman-Miller-Aeron-Chair-Smaller.jpeg" /> </div>
+
             <div class="create-post-text-section">
                 <!-- Title section-->
                 <div class="create-post-component">
