Adjusted font for Add Photos section of New Post - Item Specifics

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -363,6 +363,8 @@
     margin: 25px 25px 25px 25px;
     width: 350px;
     height: 600px;
+    font-size: 20px;
+    font-weight: bold;
     background-color: aquamarine;
     float: left;
 }
