--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -11,8 +11,11 @@
     <main role="main" class="pb-3">
         <div class="create-post-body">
             <div class="create-post-title">Item Specifics</div>
-            <div class="create-post-photo-section">Add Photos <img src="~/img/Herman-Miller-Aeron-Chair-Smaller.jpeg" /> </div>
-
+            <div class="create-post-photo-section">
+                Add Photos
+                <img src="~/img/Herman-Miller-Aeron-Chair-Smaller.jpeg" />
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button" style="margin-top: 250px;">Upload Photo(s)</button><br />
+            </div>
             <div class="create-post-text-section">
                 <!-- Title section-->
                 <div class="create-post-component">
@@ -38,7 +41,8 @@
                 </div>
             </div>
             <!-- Publish Post Button-->
-            <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/08_TutorialAfterPosting">Publish Post
+            <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/08_TutorialAfterPosting">
+                Publish Post
             </a>
         </div>
         
