Linked desk chair image to new CSS ID to properly center image within the div for New Post - Item Specifics.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -13,8 +13,8 @@
             <div class="create-post-title">Item Specifics</div>
             <div class="create-post-photo-section">
                 Add Photos
-                <img src="~/img/Herman-Miller-Aeron-Chair-Smaller.jpeg" />
-                <button type="button" class="btn btn-outline-dark sidebar-upper-button" style="margin-top: 250px;">Upload Photo(s)</button><br />
+                <img id="create-post-image" src="~/img/Herman-Miller-Aeron-Chair-Smaller.jpeg" />
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button" style="margin-top: 150px;">Upload Photo(s)</button><br />
             </div>
             <div class="create-post-text-section">
                 <!-- Title section-->
