Added box with title for New Post - SU Purchase prompt.

--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -10,3 +10,20 @@
 <h1>NewPostSUPurchase</h1>
 -->
 
+<div class="create-post-header">
+    Make a New Post<br />
+    <div class="create-post-subheader">Page 1 of 3</div>
+</div>
+
+<main role="main" class="pb-3">
+    <div class="create-post-body">
+        <div class="create-post-title">Was this item purchased with SU funds?</div>
+        
+        <!-- Next Button-->
+        <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/08_TutorialAfterPosting">
+            Publish Post
+        </a>
+    </div>
+
+
+</main>
