--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -20,8 +20,8 @@
         <div class="create-post-title">Was this item purchased with SU funds?</div>
         
         <!-- Next Button-->
-        <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/08_TutorialAfterPosting">
-            Publish Post
+        <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/06_NewPostCategorySelection">
+            Next
         </a>
     </div>
 
