Made box for New Post - SU purchase smaller.

--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -16,7 +16,7 @@
 </div>
 
 <main role="main" class="pb-3">
-    <div class="create-post-body">
+    <div class="create-post-body" style="height: 600px">
         <div class="create-post-title">Was this item purchased with SU funds?</div>
         
         <!-- Next Button-->
