--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -18,12 +18,18 @@
 <main role="main" class="pb-3">
     <div class="create-post-body" style="height: 600px">
         <div class="create-post-title">Was this item purchased with SU funds?</div>
-        
-        <!-- Next Button-->
-        <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/06_NewPostCategorySelection">
-            Next
-        </a>
-    </div>
+        <form action="">
+            <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
+            <label for="male">Yes</label><br>
+            <input type="radio" id="No" name="SUPurchase" value="No">
+            <label for="female">No</label><br>
+            <br>
+            </form>
+            <!-- Next Button-->
+            <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/06_NewPostCategorySelection">
+                Next
+            </a>
+</div>
 
 
 </main>
