--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -394,6 +394,12 @@ input[type="text"], textarea {
     font-size: 16px;
 }
 
+input[type=radio] {
+    border: 0px;
+    width: 100%;
+    height: 1.2em;
+}
+
 
 
 
