--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -9,10 +9,7 @@
         <p class="lower-sidebar-text">for this post</p>
         <button type="button" class="btn btn-outline-dark sidebar-upper-button">Email Poster</button>
         <button type="button" class="btn btn-outline-dark sidebar-upper-button">Flag</button>
-        <p class="help-text">|?| How does flagging work?</p>
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sideModalTR">
-            Launch demo modal
-        </button>
+        <p class="help-text" data-toggle="modal" data-target="#sideModalTR">|?| How does flagging work?</p>
     </div>
 
 <div class="full-listing">
