Page 12, body text in paragraphs matching wireframes added to "about flagging" modal.

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -59,7 +59,10 @@
                 </button>
             </div>
             <div class="modal-body">
-                ...
+                <h2>Questions about flagging?</h2>
+                <p><h4>What is flagging:</h4> Flagging something will remove the item from view as soon as you flag it.</p>
+                <p><h4>When to flag:</h4> You should flag items if and only if it does not adhere to the <em>posting policy</em>.</p>
+                <p><h4>Flagging is anonymous:</h4> The poster will not know who flagged their item. Only site admins can.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger">Thanks</button>
