--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -54,9 +54,6 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
             </div>
             <div class="modal-body">
                 <h2>Questions about flagging?</h2>
@@ -65,7 +62,7 @@
                 <p><h4>Flagging is anonymous:</h4> The poster will not know who flagged their item. Only site admins can.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger">Thanks</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Thanks</button>
             </div>
         </div>
     </div>
