--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -53,13 +53,12 @@
 
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title w-100" id="myModalLabel">Modal title</h4>
+                <h2>Questions about flagging?</h2>
             </div>
             <div class="modal-body">
-                <h2>Questions about flagging?</h2>
-                <p><h4>What is flagging:</h4> Flagging something will remove the item from view as soon as you flag it.</p>
-                <p><h4>When to flag:</h4> You should flag items if and only if it does not adhere to the <em>posting policy</em>.</p>
-                <p><h4>Flagging is anonymous:</h4> The poster will not know who flagged their item. Only site admins can.</p>
+                <p><b>What is flagging:</b> Flagging something will remove the item from view as soon as you flag it.</p>
+                <p><b>When to flag:</b> You should flag items if and only if it does not adhere to the <em>posting policy</em>.</p>
+                <p><b>Flagging is anonymous:</b> The poster will not know who flagged their item. Only site admins can.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Thanks</button>
