page 12, Changed the ID of the help text modal, changed the help text to target the new ID tag.

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -9,7 +9,7 @@
         <p class="lower-sidebar-text">for this post</p>
         <button type="button" class="btn btn-outline-dark sidebar-upper-button">Email Poster</button>
         <button type="button" class="btn btn-outline-dark sidebar-upper-button">Flag</button>
-        <p class="help-text" data-toggle="modal" data-target="#sideModalTR">|?| How does flagging work?</p>
+        <p class="help-text" data-toggle="modal" data-target="#flagging-help-text">|?| How does flagging work?</p>
     </div>
 
 <div class="full-listing">
@@ -39,15 +39,10 @@
 <a class="nav-link text-dark" asp-area="" asp-page="/14_FlagPost"> Flag Post </a>
 
 
-<!-- Side Modal Top Right -->
-<!-- Button trigger modal -->
 
-
-<!-- To change the direction of the modal animation change .right class -->
-<div class="modal fade right" id="sideModalTR" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade right" id="flagging-help-text" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
 
-    <!-- Add class .modal-side and then add class .modal-top-right (or other classes from list above) to set a position to the modal -->
     <div class="modal-dialog modal-side modal-top-right" role="document">
 
 
@@ -66,4 +61,5 @@
         </div>
     </div>
 </div>
-<!-- Side Modal Top Right -->
+
+
