page 12, flagging-modal's 2nd level div class now includes "modal-lg" making it a large modal.

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -43,7 +43,7 @@
 <div class="modal fade right" id="flagging-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
 
-    <div class="modal-dialog modal-side modal-top-right" role="document">
+    <div class="modal-dialog modal-side modal-top-right modal-lg" role="document">
 
 
         <div class="modal-content">
