page 12, flagging modal filled in as per wireframe: text, with checkboxes.

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -48,15 +48,24 @@
 
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Questions about flagging?</h2>
+                <h2>Flagging: 'Apple Earbuds'</h2>
             </div>
             <div class="modal-body">
-                <p><b>What is flagging:</b> Flagging something will remove the item from view as soon as you flag it.</p>
-                <p><b>When to flag:</b> You should flag items if and only if it does not adhere to the <em>posting policy</em>.</p>
-                <p><b>Flagging is anonymous:</b> The poster will not know who flagged their item. Only site admins can.</p>
+                <h3>Are you sure you want to flag 'Apple Earbuds'?</h3>
+                <ul>
+                    <li>Flagging is effective immediately and will remove the item as soon as you flag it.</li>
+                    <li>You should flag items if and only if they do not adhere to the <em>posting policy</em></li>
+                    <li>Flagging is anonymous and the poster will not know who flagged their item.</li>
+                </ul>
+                <h4>Why are you flagging?</h4>
+                <div class="checkbox"><input type="checkbox" />&nbsp;The item has been posted multiple times</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;The user is requesting payment for this item</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;The item is no longer available</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;The item is inappropriate or explicit</div>
+                <div class="checkbox"><input type="checkbox" />&nbsp;The item violates the <em>posting policy</em> in another way</div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Thanks</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Confirm Flagging</button>
             </div>
         </div>
     </div>
