Adjusted spacing of radio buttons on 05_NewPostSUPurchase

--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -16,13 +16,13 @@
 </div>
 
 <main role="main" class="pb-3">
-    <div class="create-post-body" style="height: 600px">
-        <div class="create-post-title">Was this item purchased with SU funds?</div>
+    <div class="create-post-body" style="height: 400px">
+        <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
         <form action="">
             <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
-            <label for="male">Yes</label><br>
+            <label for="male" style="font-size: 30px">Yes</label><br>
             <input type="radio" id="No" name="SUPurchase" value="No">
-            <label for="female">No</label><br>
+            <label for="female" style="font-size: 30px">No</label><br>
             <br>
             </form>
             <!-- Next Button-->
