--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -20,9 +20,9 @@
         <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
         <form action="">
             <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
-            <label for="male" style="font-size: 30px">Yes</label><br>
+            <label for="Yes" style="font-size: 30px;">Yes</label><br>
             <input type="radio" id="No" name="SUPurchase" value="No">
-            <label for="female" style="font-size: 30px">No</label><br>
+            <label for="No" style="font-size: 30px;">No</label><br>
             <br>
             </form>
             <!-- Next Button-->
