--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -395,9 +395,9 @@ input[type="text"], textarea {
 }
 
 input[type=radio] {
-    border: 0px;
-    width: 100%;
     height: 1.2em;
+    display: inline-block;
+    width: 5%;
 }
 
 
