Added div body and linked Next button in 06_NewPostCategorySelection to 07_NewPostItemSpecifics

--- a/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
+++ b/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
@@ -4,6 +4,27 @@
     ViewData["Title"] = "NewPostCategorySelection";
 }
 
+<!--
 <a class="nav-link text-dark" asp-area="" asp-page="/07_NewPostItemSpecifics"> <img src="~/img/06_category_q.jpg" /></a>
 
 <h1>NewPostCategorySelection</h1>
+-->
+
+<main role="main" class="pb-3">
+    <div class="create-post-body" style="height: 400px">
+        <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
+        <form action="">
+            <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
+            <label for="Yes" style="font-size: 30px;">Yes</label><br>
+            <input type="radio" id="No" name="SUPurchase" value="No">
+            <label for="No" style="font-size: 30px;">No</label><br>
+            <br>
+        </form>
+        <!-- Next Button-->
+        <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/07_NewPostItemSpecifics">
+            Next
+        </a>
+    </div>
+
+
+</main>
