--- a/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
+++ b/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
@@ -10,6 +10,11 @@
 <h1>NewPostCategorySelection</h1>
 -->
 
+    <div class="create-post-header">
+        Make a New Post<br />
+        <div class="create-post-subheader">Page 2 of 3</div>
+    </div>
+
 <main role="main" class="pb-3">
     <div class="create-post-body" style="height: 400px">
         <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
