Added checkboxes with item categories to 06_NewPostCategorySelection

--- a/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
+++ b/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
@@ -16,15 +16,15 @@
     </div>
 
 <main role="main" class="pb-3">
-    <div class="create-post-body" style="height: 400px">
-        <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
-        <form action="">
-            <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
-            <label for="Yes" style="font-size: 30px;">Yes</label><br>
-            <input type="radio" id="No" name="SUPurchase" value="No">
-            <label for="No" style="font-size: 30px;">No</label><br>
-            <br>
-        </form>
+    <div class="create-post-body" style="height: 800px">
+        <div class="create-post-title" style="margin-bottom: 80px">Which category best describes your item?</div>
+
+        <div class="checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
+        <div class="checkbox"><input type="checkbox" />&nbsp;Decor</div>
+        <div class="checkbox"><input type="checkbox" />&nbsp;Books</div>
+        <div class="checkbox"><input type="checkbox" />&nbsp;Electronics</div>
+        <div class="checkbox"><input type="checkbox" />&nbsp;Misc</div>
+        
         <!-- Next Button-->
         <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/07_NewPostItemSpecifics">
             Next
