Page 12, in flagging-modal, anchor tag added to confirmation button, links to page 16

--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -65,7 +65,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#flagging-confirmation">Confirm Flagging</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#flagging-confirmation"><a href="16_DemoEnd.cshtml">Confirm Flagging</a></button>
             </div>
         </div>
     </div>
