--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -65,7 +65,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#flagging-confirmation"><a href="16_DemoEnd.cshtml">Confirm Flagging</a></button>
+                <button type="button" class="btn btn-danger" ><a href="16_DemoEnd">Confirm Flagging</a></button>
             </div>
         </div>
     </div>
@@ -94,7 +94,6 @@
         </div>
     </div>
 </div>
-
 
 <!-- FLAGGING CONFIRATION MODAL -->
 <div class="modal fade right" id="flagging-confirmation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
