page 16, added javascript that should trigger a modal on entry to page.

--- a/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
+++ b/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
@@ -4,6 +4,15 @@
     ViewData["Title"] = "DemoEnd";
 }
 
+<script>
+    $(document).ready(function () {
+        $("#tutorial-modal-1").modal('show');
+    });
+</script>
+
+
+
+
 <a class="nav-link text-dark" asp-area="" asp-page="/TutorialStart"><img src="~/img/Daniel_6_all_is_good_in_the_world.jpg" /></a>
 
 <h1>DemoEnd</h1>
