page 16, corrected javascript so it now targets flagging-confirmation modal on page open.

--- a/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
+++ b/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
@@ -4,9 +4,12 @@
     ViewData["Title"] = "DemoEnd";
 }
 
+<!-- JS copy/pasted from https://www.tutorialrepublic.com/faq/how-to-launch-bootstrap-modal-on-page-load.php -->
+<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script>
     $(document).ready(function () {
-        $("#tutorial-modal-1").modal('show');
+        $("#flagging-confirmation").modal('show');
     });
 </script>
 
