Added CSS class in site.css for checkboxes in 06_NewPostCategorySelection

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -359,6 +359,13 @@
     font-size: 35px;
 }
 
+.create-post-checkbox {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+    font-size: 20px;
+}
+
 .create-post-photo-section {
     margin: 25px 25px 25px 25px;
     width: 350px;
