Adjusted size and spacing of checkbox in site.css for checkboxes that appear on 06_NewPostCategorySelection

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -360,10 +360,10 @@
 }
 
 .create-post-checkbox {
-    height: 20px;
-    width: 20px;
+    transform: scale(1.5);
     display: inline-block;
     font-size: 20px;
+    margin-bottom: 25px;
 }
 
 .create-post-photo-section {
