--- a/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
+++ b/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
@@ -19,11 +19,11 @@
     <div class="create-post-body" style="height: 800px">
         <div class="create-post-title" style="margin-bottom: 80px">Which category best describes your item?</div>
 
-        <div class="checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
-        <div class="checkbox"><input type="checkbox" />&nbsp;Decor</div>
-        <div class="checkbox"><input type="checkbox" />&nbsp;Books</div>
-        <div class="checkbox"><input type="checkbox" />&nbsp;Electronics</div>
-        <div class="checkbox"><input type="checkbox" />&nbsp;Misc</div>
+        <div class="create-post-checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
+        <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Decor</div>
+        <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Books</div>
+        <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Electronics</div>
+        <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Misc</div>
         
         <!-- Next Button-->
         <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/07_NewPostItemSpecifics">
